update content @ masha support

--- a/masha.html
+++ b/masha.html
@@ -40,21 +40,30 @@
 		<section id="team">
 			<div class="container wow fadeInUp">
 				<div class="section-header">
-					<h3 class="section-title">What is Masha Support?</h3>
-					<p class="section-description">
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
-						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut
-						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
-						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-						<br />
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
-						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut
-						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut
-						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-
-					</p>
+					<div class="row">
+						<div class="col-sm-12 col-lg-12">
+							<h3 class="section-title">Masha Support</h3>
+							<p class="section-description">
+								Each year, approximately 2,40,000 children are born in India with congenital heart
+								disease. Proper paediatric care in these situations is highly expensive and out of reach
+								for the majority of such children, often costing them their lives.<br />
+								At Masha Art, we have joined hands with the Heart 2 Heart Foundation to fund surgeries
+								of underprivileged children suffering from congenital heart diseases, throughout the
+								world.
+							</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-12 col-lg-4 text-center">
+							<img src="img/mashasupport0.png">
+						</div>
+						<div class="col-sm-12 col-lg-4 text-center">
+							<img src="img/mashasupport1.png">
+						</div>
+						<div class="col-sm-12 col-lg-4 text-center">
+							<img src="img/mashasupport2.png">
+						</div>
+					</div>
 				</div>
 
 			</div>
@@ -65,71 +74,24 @@
 					<h3 class="section-title"></h3>
 				</div>
 				<div class="row">
-
+					<div class="col-lg-12">
+						<p>
+							At Masha Art, we also familiarize the underprivileged with being able to choose alternate
+							livelihoods through the medium of art. The artistry created by these individuals is then
+							sold and promoted at our events and all proceeds donated to their supported
+							cause/organizations.
+						</p>
+					</div>
+					<div class="col-lg-4 col-sm-12 text-center">
+						<img src="img/mashasupport3.png">
+					</div>
+					<div class="col-lg-4 col-sm-12 text-center">
+						<img src="img/mashasupport4.png">
+					</div>
+					<div class="col-lg-4 col-sm-12 text-center">
+						<img src="img/mashasupport5.png">
+					</div>
 				</div>
-
-				<div class="row" id="portfolio-wrapper">
-					<div class="col-lg-8 col-md-6 portfolio-item filter-app">
-
-						<img src="img/PHOTO-2019-01-08-18-09-07-2.png" alt="">
-					</div>
-
-
-					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
-
-						<div style="text-align: left;margin-top:80px;">
-							<h2><b>Malhaar</b></h2>
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
-							perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed
-							ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
-							perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-							<br />
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
-							perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut
-							perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed
-							ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-							<span><b>Read more</b></span>
-						</div>
-
-					</div>
-
-
-
-				</div>
-				<div class="row" id="portfolio-wrapper" style="margin-top:130px;">
-					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<div style="text-align: left;margin-top:80px;">
-							<h2><b>Malhaar</b></h2>
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
-							perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed
-							ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
-							perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-							<br />
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
-							perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut
-							perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed
-							ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-							<span><b>Read more</b></span>
-						</div>
-
-					</div>
-
-
-					<div class="col-lg-8 col-md-6 portfolio-item filter-web">
-
-						<img src="img/PHOTO-2019-01-08-18-09-07-2.png" alt="">
-
-					</div>
-
-
-
-				</div>
-
-
 			</div>
 		</section>
 
