--- a/masha.html
+++ b/masha.html
@@ -141,6 +141,12 @@
 			dots[slideIndex - 1].className += " w3-white";
 		}
 	</script>
+
+	<style>
+		.section-header img {
+			max-width: 90%;
+		}
+	</style>
 </body>
 
 </html>
