style images @ masha support

--- a/masha.html
+++ b/masha.html
@@ -83,12 +83,12 @@
 						</p>
 					</div>
 					<div class="col-lg-4 col-sm-12 text-center">
-						<img src="img/mashasupport3.png">
+						<img src="img/mashasupport3.png" style="width: 90%">
 					</div>
-					<div class="col-lg-4 col-sm-12 text-center">
+					<div class="col-lg-4 col-sm-12 text-center" style="width: 90%">
 						<img src="img/mashasupport4.png">
 					</div>
-					<div class="col-lg-4 col-sm-12 text-center">
+					<div class="col-lg-4 col-sm-12 text-center" style="width: 90%">
 						<img src="img/mashasupport5.png">
 					</div>
 				</div>
