--- a/index.html
+++ b/index.html
@@ -88,25 +88,42 @@
 
 						<div class="item active">
 							<div class="col-lg-12 text-center text-lg-left">
-								<p class="cta-text"> Duis aute irure dolor in reprehenderit in voluptate velit esse
-									cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-									proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+								<p class="cta-text"> It was indeed a wonderful experience attending two of your
+									exhibitions ! Must compliment you on the selection of the artists - there was a good
+									balance of masters and EMerging Masters ! -- Sanjiv Sachar(Additional Director, HDFC
+									Bank)</p>
 							</div>
 						</div>
 
 						<div class="item">
 							<div class="col-lg-12 text-center text-lg-left">
-								<p class="cta-text"> Duis aute irure dolor in reprehenderit in voluptate velit esse
-									cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-									proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+								<p class="cta-text"> Very impressed with the ensemble put together by Masha Art -- Pavan
+									Chawdhary (Writer, TV Talk Show Host and CEO Vygon)</p>
 							</div>
 						</div>
 
 						<div class="item">
 							<div class="col-lg-12 text-center text-lg-left">
-								<p class="cta-text"> Duis aute irure dolor in reprehenderit in voluptate velit esse
-									cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-									proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+								<p class="cta-text">I enjoyed the passion and love for art that the young Masha Team had
+									- very inspiring to see such talent and appreciation for the creative form ! --
+									Pooja Sehgal (Brand and digital Communications, The Bill & Melinda Gates
+									foundations)</p>
+							</div>
+						</div>
+
+						<div class="item">
+							<div class="col-lg-12 text-center text-lg-left">
+								<p class="cta-text">As a Design Studio , We love using art for our interiors! Masha Art
+									is my first port of call when sourcing art. We are sure to always find something
+									very speacial for our clients each time! -- sonia Baweja(Interior Designer)</p>
+							</div>
+						</div>
+
+						<div class="item">
+							<div class="col-lg-12 text-center text-lg-left">
+								<p class="cta-text">Guided by smart, well-informed and enthusiastic team at Masha Art's
+									Exhibition was quite a treat! A noble initiative to give back to society. --Sunil
+									Raman (Communication Officer , The Bill & Melinda Gates Foundations)</p>
 							</div>
 						</div>
 
@@ -309,7 +326,8 @@
 		#header #logo .title {
 			display: none;
 		}
-		@media (max-width: 992px){
+
+		@media (max-width: 992px) {
 			#header.header-fixed #logo .title {
 				display: inline;
 			}
