style images @ masha support

--- a/masha_support.html
+++ b/masha_support.html
@@ -84,13 +84,13 @@
 						</p>
 					</div>
 					<div class="col-lg-4 col-sm-12 text-center">
-						<img src="img/mashasupport3.png" style="width: 90%">
+						<img src="img/mashasupport3.png" style="max-width: 90%">
 					</div>
-					<div class="col-lg-4 col-sm-12 text-center" style="width: 90%">
-						<img src="img/mashasupport4.png">
+					<div class="col-lg-4 col-sm-12 text-center">
+						<img src="img/mashasupport4.png"style="max-width: 90%">
 					</div>
-					<div class="col-lg-4 col-sm-12 text-center" style="width: 90%">
-						<img src="img/mashasupport5.png">
+					<div class="col-lg-4 col-sm-12 text-center">
+						<img src="img/mashasupport5.png" style="max-width: 90%">
 					</div>
 				</div>
 			</div>
