--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					</ol>
 
 					<!-- Wrapper for slides -->
-					<div class="carousel-inner">
+					<div class="carousel-inner" style="height: 70px; font-size: 16px;">
 
 						<div class="item active">
 							<div class="col-lg-12 text-center text-lg-left">
