--- a/artistdetail.html
+++ b/artistdetail.html
@@ -8,7 +8,7 @@
 	<meta content="" name="keywords">
 	<meta content="" name="description">
 
-	<link href="img/favicon.png" rel="icon">
+	<link href="img/branding.jpeg" rel="icon">
 	<link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
