--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
-	<link href="img/favicon.png" rel="icon">
+	<link href="img/branding.jpeg" rel="icon">
 	<link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
 
