--- a/Gallery.html
+++ b/Gallery.html
@@ -47,7 +47,7 @@
 					<div class="col-lg-12" id="handicrafts-control" style="display: none;">
 						<h5><b>Handicrafts: </b></h5>
 						<div class="options">
-							<a href="#" class="selected">Shawls</a>
+							<a href="#" class="selected">Artefacts</a>
 							<a href="#">Carpets</a>
 							<a href="#">Others</a>
 						</div>
