style masha support images

--- a/masha_support.html
+++ b/masha_support.html
@@ -56,13 +56,13 @@
 					</div>
 					<div class="row">
 						<div class="col-sm-12 col-lg-4 text-center">
-							<img src="img/mashasupport0.png">
+							<img src="img/mashasupport0.png" class="image">
 						</div>
 						<div class="col-sm-12 col-lg-4 text-center">
-							<img src="img/mashasupport1.png">
+							<img src="img/mashasupport1.png" class="image">
 						</div>
 						<div class="col-sm-12 col-lg-4 text-center">
-							<img src="img/mashasupport2.png">
+							<img src="img/mashasupport2.png" class="image">
 						</div>
 					</div>
 				</div>
@@ -84,13 +84,13 @@
 						</p>
 					</div>
 					<div class="col-lg-4 col-sm-12 text-center">
-						<img src="img/mashasupport3.png" style="max-width: 90%">
+						<img src="img/mashasupport3.png" class="image">
 					</div>
 					<div class="col-lg-4 col-sm-12 text-center">
-						<img src="img/mashasupport4.png"style="max-width: 90%">
+						<img src="img/mashasupport4.png" class="image">
 					</div>
 					<div class="col-lg-4 col-sm-12 text-center">
-						<img src="img/mashasupport5.png" style="max-width: 90%">
+						<img src="img/mashasupport5.png" class="image">
 					</div>
 				</div>
 			</div>
@@ -144,8 +144,14 @@
 	</script>
 
 	<style>
-		.section-header img {
+		.image {
 			max-width: 90%;
+			padding: 10px;
+			border-color: #3333;
+			border-style: solid;
+			border-width: 1px;
+
+			margin: 10px 0px;
 		}
 	</style>
 </body>
