--- a/index.html
+++ b/index.html
@@ -150,15 +150,8 @@
 					<div class="col-lg-12">
 						<div class="member">
 							<div style="display: flex; justify-content: center;">
-								<a href="masha_support.html"><img src="img/Masha x H2H.png" alt="" style=`
-										width: 80vw; 
-										flex: none;
-										padding: 20px;
-										border-color: #d21fec33;
-										border-width: 3px;
-										border-style: solid;
-										border-radius: 16px;
-										`></a>
+								<a href="masha_support.html"><img src="img/Masha x H2H.png" alt="" 
+									style="width: 80vw; flex: none; padding: 20px; border-color: #d21fec33; border-width: 3px; border-style: solid; border-radius: 16px;"></a>
 							</div>
 						</div>
 					</div>
