--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 
 </head>
 
-<body  style="font-family: Roboto">
+<body style="font-family: Roboto">
 
 	<script src="js/navbar_bg_white.js"></script>
 
@@ -39,21 +39,12 @@
 		<section id="team">
 			<div class="container wow fadeInUp">
 				<div class="section-header">
-					<h3 class="section-title">About Masha</h3>
-					<p class="section-description">
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
-						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut
-						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
-						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-						<br />
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
-						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut
-						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-						Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut
-						perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-
-					</p>
+					<h3 class="section-title">About Masha</h3><br />
+					<p class="section-description">Masha Art is the first of its kind Luxury Art Investment Company. We
+						are an Online Gallery showcasing exquisitely curated Artwork suiting the palettes of
+						connoisseurs and investors alike.<br />
+						With processes designed exclusively for our clients, we provide one-stop solutions for
+						Decorative Investment with a portfolio of 2000+ Artworks from Master artists across India.</p>
 				</div>
 
 			</div>
@@ -61,43 +52,29 @@
 		<section id="portfolio" style="margin-top:-130px;">
 			<div class="container wow fadeInUp">
 				<div class="section-header">
-					<h3 class="section-title"></h3>
+					<h3 class="section-title" style="text-transform: none">The Masha Journey</h3>
 				</div>
 				<div class="row">
 
 				</div>
 
 				<div class="row" id="portfolio-wrapper">
-					<div class="col-lg-8 col-md-6 portfolio-item filter-app">
-
-						<img src="img/PHOTO-2019-01-08-18-09-07-2.png" alt="">
-					</div>
-
-
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
-
 						<div style="text-align: left;margin-top:80px;">
-							<h2><b>Mission</b></h2>
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
-							perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed
-							ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
-							perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-							<br />
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.Sed ut
-							perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut
-							perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-							Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed
-							ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-							<span><b>Read more</b></span>
+							Masha, is made of two feelings- Ma meaning Mother and Sha(nti) meaning peace- Where you come
+							from and where you want to be.<br />
+							At Masha Art, we strive to bring to you artwork from all corners of India known and unknown
+							to do our part in preserving the essence of our culture. We are also backed by an array of
+							artists and professionals who illustrously endorse our mission.<br />
+							In this stride, the Masha Family has chosen not to walk alone but together, represent
+							impact. With our numerous initiatives, the team is tirelessly working towards providing the
+							underprivileged with an 'alternate chance at life'. Our constant endeavour is not to change
+							these souls for the world, but to change the world for these souls.<br />
+							We'd love your support!<br />
 						</div>
-
 					</div>
-
-
-
 				</div>
-				<div class="row" id="portfolio-wrapper" style="margin-top:130px;">
+				<!-- <div class="row" id="portfolio-wrapper" style="margin-top:130px;">
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div style="text-align: left;margin-top:80px;">
 							<h2><b>Team</b></h2>
@@ -127,7 +104,7 @@
 
 
 				</div>
-
+ -->
 
 			</div>
 		</section>
