--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<section id="portfolio">
 			<div class="container wow fadeInUp row-center">
 				<div class="section-header">
-					<h3 class="section-title" style="text-transform: none;">Curators' Recommendations</h3>
+					<h3 class="section-title" style="text-transform: none;">Curators' Recommendations</h3><br />
 				</div>
 
 				<div class="row" id="portfolio-wrapper">
