--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 				</div>
 				<div class="row" id="portfolio-wrapper">
 					<div class="col-lg-12 col-md-12 portfolio-item filter-web">
-						<div style="text-align: left;margin-top:80px;">
+						<div style="text-align: left;"><br />
 							Masha, is made of two feelings- Ma meaning Mother and Sha(nti) meaning peace- Where you come
 							from and where you want to be.<br />
 							At Masha Art, we strive to bring to you artwork from all corners of India known and unknown
