change about us

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 		<section id="team">
 			<div class="container wow fadeInUp">
 				<div class="section-header">
-					<h3 class="section-title">About Masha</h3><br />
+					<h3 class="section-title" style="text-transform: none;">About Masha Art</h3><br />
 					<p class="section-description">Masha Art is the first of its kind Luxury Art Investment Company. We
 						are an Online Gallery showcasing exquisitely curated Artwork suiting the palettes of
 						connoisseurs and investors alike.<br />
