--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 		<section id="portfolio" style="margin-top:-130px;">
 			<div class="container wow fadeInUp">
 				<div class="section-header">
-					<h3 class="section-title" style="text-transform: none">The Masha Journey</h3>
+					<h3 class="section-title" style="text-transform: none">The Masha Art Journey</h3>
 				</div>
 				<div class="row" id="portfolio-wrapper">
 					<div class="col-lg-12 col-md-12 portfolio-item filter-web">
