--- a/about.html
+++ b/about.html
@@ -54,8 +54,8 @@
 				<div class="section-header">
 					<h3 class="section-title" style="text-transform: none">The Masha Art Journey</h3>
 				</div>
-				<div class="row" id="portfolio-wrapper">
-					<div class="col-lg-12 col-md-12 portfolio-item filter-web">
+				<div class="row">
+					<div class="col-lg-12 col-md-12">
 						<div style="text-align: left;"><br />
 							Masha, is made of two feelings- Ma meaning Mother and Sha(nti) meaning peace- Where you come
 							from and where you want to be.<br />
