--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 						<div class="member">
 							<div style="display: flex; justify-content: center;">
 								<a href="masha_support.html"><img src="img/Masha x H2H.png" alt="" 
-									style="width: 80vw; flex: none; padding: 20px; border-color: #3333; border-width: 3px; border-style: solid; border-radius: 16px;"></a>
+									style="width: 80vw; height: 25vw; flex: none; padding: 20px; border-color: #3333; border-width: 3px; border-style: solid; border-radius: 16px;"></a>
 							</div>
 						</div>
 					</div>
