change 3 point color

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
 						<div>
 							<br>
-							<h5><b>ARTIST AUTHENTICITY</b></h5>
+							<h5 style="color: #676768;"><b>ARTIST AUTHENTICITY</b></h5>
 						</div>
 					</div>
 
@@ -176,7 +176,7 @@
 						<span><img src="img/Display Trial Icon.png" style="width: 150px; height: 150px;"></span>
 						<div>
 							<br>
-							<h5><b>ON-SITE DISPLAY AND TRIALS</b></h5>
+							<h5 style="color: #676768;"><b>ON-SITE DISPLAY AND TRIALS</b></h5>
 						</div>
 					</div>
 
@@ -184,7 +184,7 @@
 						<span><img src="img/Advisory Icon.png" style="width: 150px; height: 150px;"></span>
 						<div>
 							<br>
-							<h5><b>PERSONALISED ART INVESTMENT ADVISORY</b></h5>
+							<h5 style="color: #676768;"><b>PERSONALISED ART INVESTMENT ADVISORY</b></h5>
 						</div>
 					</div>
 				</div>
