--- a/product.html
+++ b/product.html
@@ -239,7 +239,7 @@
 					$("#product-details").append(`<h2><b>${data.name}</b><h2>`);
 					$("#product-modal-name").html(data.name);
 					$("#product-details, #product-modal-details").append(`
-						<span style="text-decoration-line:underline;font-size:24px;"><b>${data.artist}</b></span><br />
+						<span style="font-size:24px;"><b>${data.artist}</b></span><br />
 						<span style="color:lightgray;font-size:18px;">Dimensions: ${data.size}</span><br />
 						<span style="color:lightgray;font-size:18px;">Medium: ${data.medium}</span><br />
 					`);
