change font sizes

--- a/masha_support.html
+++ b/masha_support.html
@@ -44,7 +44,7 @@
 						<div class="col-sm-12 col-lg-12">
 							<h3 class="section-title">Masha Support</h3>
 							<br />
-							<p class="section-description">
+							<p class="section-description" style="font-size: 16px;">
 								Each year, approximately 2,40,000 children are born in India with congenital heart
 								disease. Proper paediatric care in these situations is highly expensive and out of reach
 								for the majority of such children, often costing them their lives.<br />
@@ -76,7 +76,7 @@
 				</div>
 				<div class="row">
 					<div class="col-lg-12">
-						<p>
+						<p  style="font-size: 16px;">
 							At Masha Art, we also familiarize the underprivileged with being able to choose alternate
 							livelihoods through the medium of art. The artistry created by these individuals is then
 							sold and promoted at our events and all proceeds donated to their supported
