--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 			<div class="container wow fadeInUp">
 				<div class="section-header">
 					<h3 class="section-title" style="text-transform: none;">About Masha Art</h3><br />
-					<p class="section-description">Masha Art is the first of its kind Luxury Art Investment Company. We
+					<p class="section-description" style="font-size: 16px;">Masha Art is the first of its kind Luxury Art Investment Company. We
 						are an Online Gallery showcasing exquisitely curated Artwork suiting the palettes of
 						connoisseurs and investors alike.<br />
 						With processes designed exclusively for our clients, we provide one-stop solutions for
@@ -56,7 +56,7 @@
 				</div>
 				<div class="row">
 					<div class="col-lg-12 col-md-12">
-						<div style="text-align: left;"><br />
+						<div style="text-align: left; font-size: 16px;"><br />
 							Masha, is made of two feelings- Ma meaning Mother and Sha(nti) meaning peace- Where you come
 							from and where you want to be.<br />
 							At Masha Art, we strive to bring to you artwork from all corners of India known and unknown
