remove underline, add space

--- a/artistdetail.html
+++ b/artistdetail.html
@@ -67,7 +67,7 @@
 		<section id="team">
 			<div class="container wow fadeInUp">
 				<div class="section-header">
-					<h3 class="section-title" style="text-decoration-line:underline">Artworks</h3>
+					<h3 class="section-title" style="">Artworks</h3> <br />
 
 				</div>
 				<div class="row" id="artistArtworks">
