change font size

--- a/artistdetail.html
+++ b/artistdetail.html
@@ -55,7 +55,7 @@
 							<h2 id="artistName"><b>...</b></h2>
 							<span><b id="artistSub">...</b></span><br />
 							<br /><br />
-							<p id="artistDescription">
+							<p id="artistDescription" style="font-size: 16px;">
 								...
 							</p>
 						</div>
