add know more and style it

--- a/masha_support.html
+++ b/masha_support.html
@@ -81,7 +81,7 @@
 							livelihoods through the medium of art. The artistry created by these individuals is then
 							sold and promoted at our events and all proceeds donated to their supported
 							cause/organizations.
-						</p>
+						</p> <br />
 					</div>
 					<div class="col-lg-4 col-sm-12 text-center">
 						<img src="img/mashasupport3.png" class="image">
@@ -92,6 +92,10 @@
 					<div class="col-lg-4 col-sm-12 text-center">
 						<img src="img/mashasupport5.png" class="image">
 					</div>
+					<br />
+					<p style="text-align: right; font-size: 16px;">
+						<i class="glyphicon glyphicon-link"></i><a href="https://www.theheart2heartfoundation.org/" class="link">Know more</a>
+					</p>
 				</div>
 			</div>
 		</section>
@@ -152,6 +156,16 @@
 			border-width: 1px;
 
 			margin: 10px 0px;
+		}
+
+		a.link {
+			text-decoration: none;
+			color: #3333;
+			transition-duration: 1s;
+		}
+
+		a.link:hover {
+			color: black;
 		}
 	</style>
 </body>
