style know more link

--- a/masha_support.html
+++ b/masha_support.html
@@ -93,8 +93,8 @@
 						<img src="img/mashasupport5.png" class="image">
 					</div>
 					<br />
-					<p style="text-align: right; font-size: 16px;">
-						<i class="glyphicon glyphicon-link"></i><a href="https://www.theheart2heartfoundation.org/" class="link">Know more</a>
+					<p style="text-align: right; font-size: 14px; position:relative; left:15px;">
+						<i class="glyphicon glyphicon-link"></i> <a href="https://www.theheart2heartfoundation.org/" class="link">Click here to know more</a>
 					</p>
 				</div>
 			</div>
@@ -160,8 +160,8 @@
 
 		a.link {
 			text-decoration: none;
-			color: #3333;
-			transition-duration: 1s;
+			color: #333;
+			transition-duration: 0.5s;
 		}
 
 		a.link:hover {
