style image gallery

--- a/eventdetail.html
+++ b/eventdetail.html
@@ -209,11 +209,7 @@
 
 	<div class="modal" id="myModal">
 		<div class="modal-dialog modal-xl">
-
 			<img class="modal-content" id="img01" src="img/a2d9cce9-fd2f-4c03-b01b-05c4e22b3e2e.png" />
-
-
-
 		</div>
 	</div>
 
@@ -306,6 +302,19 @@
 	</script>
 
 	<style>
+		#gallery-container div {
+			text-align: center;
+		}
+
+		#gallery-container div img {
+			padding: 7px;
+			margin: 5px;
+			border-color: black;
+			border-style: solid;
+			border-width: 1px;
+			box-shadow: 3px 3px 3px 3px #3333;
+		}
+
 		.gallery-slider-inner img {
 			height: 200px;
 			max-width: 100%;
