--- a/eventdetail.html
+++ b/eventdetail.html
@@ -281,7 +281,7 @@
 					//$(".gallery-slider-inner").append(`<img src="${galleryThumbnailURL}/${element.thumbnail}">`);
 					$("#gallery-container").append(`
 					<div class="col-sm-12 col-md-6 col-lg-4">
-						<img style="max-width: 300px;" src="${galleryThumbnailURL}/${element.thumbnail}">
+						<img src="${galleryThumbnailURL}/${element.thumbnail}">
 					</div>
 					`);
 				});
@@ -313,6 +313,8 @@
 			border-style: solid;
 			border-width: 1px;
 			box-shadow: 3px 3px 3px 3px #3333;
+			max-height: 300px;
+			max-width: 300px;
 		}
 
 		.gallery-slider-inner img {
