--- a/masha_support.html
+++ b/masha_support.html
@@ -93,9 +93,9 @@
 						<img src="img/mashasupport5.png" class="image">
 					</div>
 					<br />
-					<p style="text-align: right; font-size: 14px; position:relative; left:30px;">
+					<div style="text-align: center; font-size: 16px;">
 						<i class="glyphicon glyphicon-link"></i> <a href="https://www.theheart2heartfoundation.org/" class="link">Click here to know more</a>
-					</p>
+					</div>
 				</div>
 			</div>
 		</section>
