--- a/masha_support.html
+++ b/masha_support.html
@@ -93,8 +93,9 @@
 						<img src="img/mashasupport5.png" class="image">
 					</div>
 					<br />
-					<div style="text-align: center; font-size: 16px;">
-						<i class="glyphicon glyphicon-link"></i> <a href="https://www.theheart2heartfoundation.org/" class="link">Click here to know more</a>
+					<div style="text-align: center; font-size: 16px; width:100%;">
+						<br />
+						<i class="glyphicon glyphicon-link"></i> <a href="https://www.theheart2heartfoundation.org/" class="link" style="text-transform: uppercase">Click here to know more</a>
 					</div>
 				</div>
 			</div>
