remove space before image gallery

--- a/eventdetail.html
+++ b/eventdetail.html
@@ -177,7 +177,7 @@
 			</div>
 		</section>
 
-		<section id="services">
+		<section id="services" style="padding-top: 0px;">
 			<div class="container wow fadeIn">
 				<div class="section-header">
 					<h3 class="section-title">Image Gallery</h3>
