--- a/eventdetail.html
+++ b/eventdetail.html
@@ -76,6 +76,7 @@
 			max-width: 700px;
 		}
 
+
 		/* Caption of Modal Image */
 		#caption {
 			margin: auto;
@@ -191,8 +192,10 @@
 							<div class="gallery-slider-inner">
 							</div>
 							<div class="gallery-slider-control">
-								<span class="control-left"><i class="fa fa-chevron-left" style="font-size: 24px;"></i></span>
-								<span class="control-right"><i class="fa fa-chevron-right" style="font-size: 24px;"></i></span>
+								<span class="control-left"><i class="fa fa-chevron-left"
+										style="font-size: 24px;"></i></span>
+								<span class="control-right"><i class="fa fa-chevron-right"
+										style="font-size: 24px;"></i></span>
 							</div>
 						</div>
 					</div>
@@ -206,14 +209,9 @@
 
 	<div class="modal" id="myModal">
 		<div class="modal-dialog modal-xl">
-
-			<img class="modal-content" id="img01" src="img/a2d9cce9-fd2f-4c03-b01b-05c4e22b3e2e.png" />
-
-
-
+			<img class="modal-content" id="img01" src="img/placeholder.jpg" />
 		</div>
 	</div>
-
 
 	<a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
