--- a/eventdetail.html
+++ b/eventdetail.html
@@ -210,10 +210,8 @@
 
 	<script src="js/footer.js"></script>
 
-	<div class="modal" id="myModal">
-		<div class="modal-dialog modal-xl">
-			<img class="modal-content" id="img01" src="img/placeholder.jpg" />
-		</div>
+	<div class="media-viewer">
+			<img src="img/placeholder.jpg" />
 	</div>
 
 	<a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
@@ -293,6 +291,11 @@
 			$(".gallery-slider-inner").on("click", "img", (ev) => {
 				modal.style.display = "block";
 				modalImg.src = $(ev.target).attr("src");
+			});
+
+			$("#gallery-container").on("click", "img", (ev)=>{
+				$(".media-viewer img").attr("src", $(ev.target).attr("src"));
+				$(".media-viewer").show();
 			});
 		}
 
