hide media-viewer by default

--- a/eventdetail.html
+++ b/eventdetail.html
@@ -210,7 +210,7 @@
 
 	<script src="js/footer.js"></script>
 
-	<div class="media-viewer">
+	<div class="media-viewer" style="display:none;">
 			<img src="img/placeholder.jpg" />
 	</div>
 
