--- a/eventdetail.html
+++ b/eventdetail.html
@@ -159,12 +159,12 @@
 				</div>
 
 				<div class="row" id="portfolio-wrapper">
-					<div class="col-lg-8 col-md-6 portfolio-item filter-app" style="height: unset;">
+					<div class="col-lg-8 col-md-6 portfolio-item filter-app" style="height: unset; width: 75%; margin-bottom: 10px;">
 						<img id="event-pic" style="max-width: unset; max-height: unset; width: 95%;"
 							src="img/placeholder.jpg" alt="">
 					</div>
 
-					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
+					<div class="col-lg-4 col-md-6 portfolio-item filter-web" style="width: 90%;">
 						<div style="text-align: left;margin-top:-25px;">
 							<h2><b id="event-name">...</b></h2>
 							<span><b id="event-time">...</b></span><br />
