fix orientation for images

--- a/eventdetail.html
+++ b/eventdetail.html
@@ -303,6 +303,7 @@
 			position: relative;
 			transition-duration: 0.5s;
 			top: 0;
+			image-orientation: from-image;
 		}
 
 		.gallery-slider-inner img:hover {
