fix image orientation

--- a/eventdetail.html
+++ b/eventdetail.html
@@ -320,6 +320,7 @@
 			box-shadow: 3px 3px 3px 3px #3333;
 			max-height: 300px;
 			max-width: 300px;
+			image-orientation: from-image;
 		}
 
 		.gallery-slider-inner img {
