--- a/events.html
+++ b/events.html
@@ -121,7 +121,7 @@
 				data.forEach((element) => {
 					$("#portfolio-wrapper").append(`
 						<div class="col-lg-6 col-md-6 portfolio-item filter-app" data-id="${element.id}" style="height: 200px">
-							<div style="position: absolute;z-index: 2; bottom: 7%; linear-gradient(to right, rgba(0,0,0,0.5), rgba(0,0,0,0));">
+							<div style="position: absolute;z-index: 2; bottom: 7%; background: linear-gradient(to right, rgba(0,0,0,0.5), rgba(0,0,0,0));">
 								<h4 style="color:white; padding: 8px 50px 8px 8px;">${element.name}</h4>
 							</div>
 							<img src="${thumbnailURL}/${element.thumbnail}" style="width:unset; height:unset; max-width:100%;" alt="">
