--- a/eventdetail.html
+++ b/eventdetail.html
@@ -160,7 +160,7 @@
 
 				<div class="row" id="portfolio-wrapper">
 					<div class="col-lg-8 col-md-6 portfolio-item filter-app" style="height: unset; width: 75%; margin-bottom: 10px;">
-						<img id="event-pic" style="max-width: unset; max-height: unset; width: 95%;"
+						<img id="event-pic" style="max-width: unset; max-height: unset; width: 95%; margin-bottom: 10px;"
 							src="img/placeholder.jpg" alt="">
 					</div>
 
