--- a/eventdetail.html
+++ b/eventdetail.html
@@ -164,7 +164,7 @@
 							src="img/placeholder.jpg" alt="">
 					</div>
 
-					<div class="col-lg-4 col-md-6 portfolio-item filter-web" style="width: 90%;">
+					<div class="col-lg-4 col-md-6 portfolio-item filter-web" style="width: 90%; margin-top: 3px;">
 						<div style="text-align: left;margin-top:-25px;">
 							<h2><b id="event-name">...</b></h2>
 							<span><b id="event-time">...</b></span><br />
