Remove uppercase effect for headings

--- a/inmedia.html
+++ b/inmedia.html
@@ -41,7 +41,7 @@
 		<section id="portfolio">
 			<div class="container wow fadeInUp">
 				<div class="section-header">
-					<h3 class="section-title">In Media</h3>
+					<h3 class="section-title" style="text-transform: none">In Media</h3>
 				</div>
 				<div class="row">
 
