--- a/masha_support.html
+++ b/masha_support.html
@@ -42,7 +42,7 @@
 				<div class="section-header">
 					<div class="row">
 						<div class="col-sm-12 col-lg-12">
-							<h3 class="section-title">Masha Support</h3>
+							<h3 class="section-title" style="text-transform: none;">Masha Support</h3>
 							<br />
 							<p class="section-description" style="font-size: 16px;">
 								Each year, approximately 2,40,000 children are born in India with congenital heart
