--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 
 		</section>
-		<section id="team">
+		<!-- <section id="team">
 			<div class="container wow fadeInUp">
 				<div class="row">
 					<div class="col-lg-12">
@@ -157,7 +157,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<section id="facts">
 			<div class="container wow fadeIn">
 
