--- a/masha_support.html
+++ b/masha_support.html
@@ -95,7 +95,7 @@
 					<br />
 					<div style="text-align: center; font-size: 16px; width:100%;">
 						<br />
-						<i class="glyphicon glyphicon-link"></i> <a href="https://www.theheart2heartfoundation.org/" class="link" style="text-transform: uppercase">Click here to know more</a>
+						<i class="glyphicon glyphicon-link"></i> <a href="https://www.h2h.foundation/" class="link" style="text-transform: uppercase">Click here to know more</a>
 					</div>
 				</div>
 			</div>
