implement ordering of events

--- a/events.html
+++ b/events.html
@@ -106,13 +106,13 @@
 
 			switch (type) {
 				case "events":
-					baseurl += "/events.php";
+					baseurl += "/events.php?sort=ordering";
 					thumbnailURL = URLBuilder.eventsThumbnailURL();
 					break;
 				case "upcoming_events":
 					break;
 				case "exhibitions":
-					baseurl += "/exhibitions.php";
+					baseurl += "/exhibitions.php?sort=ordering";
 					thumbnailURL = URLBuilder.exhibitionsThumbnailURL();
 					break;
 			}
