fix header getting cut in mobiles

--- a/eventdetail.html
+++ b/eventdetail.html
@@ -166,7 +166,7 @@
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web" style="width: 90%; margin-top: 3px;">
 						<div style="text-align: left;margin-top:-25px;">
-							<h2><b id="event-name">...</b></h2>
+							<h2 style="margin-top: 30px;"><b id="event-name">...</b></h2>
 							<span><b id="event-time">...</b></span><br />
 							<span><b> Venue: <span id="event-venue">...</span></b></span><br /><br />
 							<p id="event-content">
